assets/css/header.css
.tab.wrapper {
    float: left;

    z-index: 10;
    position: relative;
    height: 100%;
    cursor: pointer;
}

.tab.top.border.selected {
    height: 23px;
    border-left: 1px solid #858585;
    border-right: 1px solid #858585;
    padding-top: 1px;
}



.tab.top.container.items {
    background: #dddddd none repeat scroll 0 0;
    border-right: 0 solid #d5d5d5;
    border-top: 1px solid #c9c9c9;
    padding: 0;
    box-sizing: border-box;
    height: 100%;
}

.tab.top.container.item {
    float: left;
    height: 100%;
    border-left: 1px solid #b2b2b2;
    border-top: 1px solid #efefef;
    border-bottom: 1px solid #d7d7d7;
    border-right: 1px solid #eaeaea;
    box-sizing: border-box;
    width: 30px;
}

.tab.top.container.item:hover {
    background: #ececec;
}

.tab.text {
    font-size: 9pt;
    color: #6f6f6f;
    line-height: 22px;
    padding-left: 10px;
    padding-right: 10px;
    font-weight: 400;
}

.tab.top.container.selected {
    height: 100%;
    background: #dddddd;
    border-top: 1px solid #efefef;
    box-sizing: border-box;
    border-right: 1px solid #efefef;


}

.tab.bottom.selected {
    background: #dddddd;

    height: 5px;
    width: 100%;
}

.tab.top.border.unselected {
    height: 100%;
    border-right: 1px solid #858585;
    padding-top: 1px;
    border-Bottom: 1px solid #858585;
}

.tab.top.container.unselected {
    background: #dddddd none repeat scroll 0 0;
    border-right: 1px solid #efefef;
    border-top: 1px solid #efefef;
    box-sizing: border-box;
    height: 22px;
}

.tab.top.container.unselected:hover {
    background: #ececec;
}

.tab.bottom.unselected {
    background: #d9d9d9;
    border-top: 1px solid #f5f5f5;
    height: 4px;
    width: 100%;
}

.tab.bg {
    position: absolute;
    bottom: 0px;
    right: 0px;
    left: 0px;
}

.tab.bg .border {
    border-bottom: 1px solid #858585;
    height: 23px;
    width: 100%;
}

.tab.bg .container {
    height: 100%;
    background: #b5b5b5;
    border-top: 2px solid #c9c9c9;
    border-bottom: 1px solid #afafaf;
    box-sizing: border-box;
}

.tab.bg .bottom {
    background: #d9d9d9;
    border-top: 1px solid #f5f5f5;
    height: 4px;
    width: 100%;
}

